@@ -17,10 +17,11 @@
 
 #include <CCore/inc/CmdInput.h>
 #include <CCore/inc/ReadCon.h>
-#include <CCore/inc/Scanf.h>
+#include <CCore/inc/Task.h>
 
 #include <CCore/inc/net/PKE.h>
 #include <CCore/inc/net/PSec.h>
+#include <CCore/inc/net/PTPClientDevice.h>
 
 #include <CCore/inc/OwnPtr.h>
 
@@ -32,7 +33,97 @@ namespace Private_1031 {
 
 /* class DataEngine */
 
-class DataEngine : public Funchor_nocopy , public MemBase
+class DataEngine : public MemBase_nocopy
+ {
+   Net::PSec::EndpointDevice psec;
+   
+   ObjMaster psec_master;
+   
+   Net::PTP::ClientDevice ptp;
+   
+   PacketSet<uint8> pset;
+  
+   Net::AsyncUDPEndpointDevice::StartStop psec_start_stop;
+   
+  public:
+  
+   DataEngine(Net::AsyncUDPEndpointDevice &psec_udp,const Net::PSec::MasterKey &key);
+   
+   ~DataEngine();
+   
+   void close();
+   
+   void test();
+   
+   void stat();
+ };
+
+DataEngine::DataEngine(Net::AsyncUDPEndpointDevice &psec_udp,const Net::PSec::MasterKey &key)
+ : psec("psec_udp",key,60_sec),
+   psec_master(psec,"psec"),
+   ptp("psec"),
+   psec_start_stop(psec_udp)
+ {
+  if( ptp.support(pset) )
+    Printf(Con,"PTP support exchange is OK\n");
+  else
+    Printf(Con,"PTP support exchange has failed\n");
+ }
+
+DataEngine::~DataEngine()
+ {
+ }
+
+void DataEngine::close()
+ {
+  psec.close();
+ }
+
+void DataEngine::test()
+ {
+ }
+
+void DataEngine::stat()
+ {
+  {
+   Net::PSec::EndpointDevice::StatInfo info;
+   
+   psec.getStat(info);
+   
+   Printf(Con,"#;\n\n#;\n",Title("PSec"),info);
+  }
+  
+  {
+   Net::PTP::ClientDevice::StatInfo info;
+   
+   ptp.getStat(info);
+   
+   Printf(Con,"#;\n\n#;\n",Title("PTP"),info);
+  } 
+ }
+
+/* struct ConnectParam */
+
+struct ConnectParam
+ {
+  Net::UDPort pke_port = Net::PKEClientUDPort ;
+  Net::UDPort psec_port = Net::PSecClientUDPort ;
+  Net::PSec::CryptID crypt_id = Net::PSec::CryptID_AES256 ;
+  Net::PSec::HashID hash_id = Net::PSec::HashID_SHA256 ;
+  Net::PSec::DHGroupID dhg_id = Net::PSec::DHGroupID_II ;
+  
+  ConnectParam() {}
+  
+  template <class S>
+  void scan(S &inp)
+   {
+    Scanf(inp,"#; #; #; #; #;",pke_port,psec_port,crypt_id,hash_id,dhg_id);
+   }
+ };
+
+/* class ConnectEngine */
+
+class ConnectEngine : public Funchor_nocopy , public MemBase
  {
    Net::AsyncUDPEndpointDevice pke_udp;
   
@@ -45,17 +136,34 @@ class DataEngine : public Funchor_nocopy , public MemBase
    Net::PSec::ClientNegotiant pke;
    
    Net::AsyncUDPEndpointDevice::StartStop pke_start_stop;
-
+   
+   Sem stop_sem;
+   
+   enum EventId
+    {
+     EventStop = 1,
+     EventDone = 2,
+    
+     EventLim
+    };
+   
+   MultiEvent<EventLim-1> mevent;
+   
+   Mutex mutex;
+   
+   OwnPtr<DataEngine> engine;
+   
   private: 
    
-   void pke_done()
-    {
-     Printf(Con,"\nconnected\n");
-    
-     //sem.give();
-    }
+   void handle_done();
    
-   Function<void (void)> function_pke_done() { return FunctionOf(this,&DataEngine::pke_done); }
+   void run();
+   
+   void stop() { mevent.trigger(EventStop); }
+   
+   void pke_done() { mevent.trigger(EventDone); }
+   
+   Function<void (void)> function_pke_done() { return FunctionOf(this,&ConnectEngine::pke_done); }
    
    Net::PSec::AbstractHashFunc * createClientKey() const
     {
@@ -77,19 +185,95 @@ class DataEngine : public Funchor_nocopy , public MemBase
    
   public:
   
-   DataEngine(Net::UDPort pke_port,Net::UDPort psec_port);
+   explicit ConnectEngine(const ConnectParam &param);
    
-   DataEngine() : DataEngine(Net::PKEClientUDPort,Net::PSecClientUDPort) {}
-   
-   ~DataEngine();
+   ~ConnectEngine();
    
    void close();
+   
+   template <class Func>
+   void cmd(Func func)
+    {
+     Mutex::Lock lock(mutex);
+     
+     if( +engine )
+       func(*engine);
+     else
+       Printf(Con,"no connection\n");
+    }
  };
 
-DataEngine::DataEngine(Net::UDPort pke_port,Net::UDPort psec_port)
- : pke_udp(pke_port,Net::UDPoint(127,0,0,1,Net::PKEServerUDPort)),
+void ConnectEngine::handle_done()
+ {
+  switch( pke.getState() )
+    {
+     case Net::PSec::ClientNegotiant::State_Done :
+      {
+       Printf(Con,"\n !connected\n");
+       
+       try
+         {
+          Mutex::Lock lock(mutex);
+ 
+          Net::PSec::MasterKeyPtr key;
+          
+          pke.getSessionKey(key);
+          
+          engine.set(new DataEngine(psec_udp,*key));
+         }
+       catch(CatchType)
+         {
+         }
+      }
+     break; 
+      
+     case Net::PSec::ClientNegotiant::State_ClientError :
+      {
+       Printf(Con,"\n !client error #;\n",pke.getError());
+      }
+     break; 
+      
+     case Net::PSec::ClientNegotiant::State_ServerError :
+      {
+       Printf(Con,"\n !server error #;\n",pke.getError());
+      }
+     break; 
+      
+     case Net::PSec::ClientNegotiant::State_Timeout :
+      {
+       Printf(Con,"\n !timeout\n");
+      }
+     break; 
+    }
+ }
+
+void ConnectEngine::run()
+ {
+  for(;;)
+    {
+     switch( mevent.wait() )
+       {
+        case EventStop :
+         {
+          stop_sem.give();
+          
+          return;
+         }
+        break;
+        
+        case EventDone :
+         {
+          handle_done();
+         }
+        break; 
+       }
+    }
+ }
+
+ConnectEngine::ConnectEngine(const ConnectParam &param)
+ : pke_udp(param.pke_port,Net::UDPoint(127,0,0,1,Net::PKEServerUDPort)),
    pke_udp_master(pke_udp,"pke_udp"),
-   psec_udp(psec_port,Net::UDPoint(127,0,0,1,Net::PSecServerUDPort)),
+   psec_udp(param.psec_port,Net::UDPoint(127,0,0,1,Net::PSecServerUDPort)),
    psec_udp_master(psec_udp,"psec_udp"),
    pke("pke_udp",function_pke_done()),
    pke_start_stop(pke_udp)
@@ -102,31 +286,57 @@ DataEngine::DataEngine(Net::UDPort pke_port,Net::UDPort psec_port)
   
   pke.prepare(psec_udp.getDevicePort(),client_id,client_key,server_key);
   
-  pke.start(CryptAlgoSelect(CryptID_AES256,HashID_SHA256,DHGroupID_II));
+  pke.start(CryptAlgoSelect(param.crypt_id,param.hash_id,param.dhg_id));
+  
+  RunFuncTask( [this] () { run(); } , stop_sem.function_give() );
  }
 
-DataEngine::~DataEngine()
+ConnectEngine::~ConnectEngine()
  {
+  stop();
+  
+  stop_sem.take();
  }
 
-void DataEngine::close()
+void ConnectEngine::close()
  {
+  Mutex::Lock lock(mutex);
+  
+  if( +engine ) 
+    engine->close();
+  else
+    Printf(Con,"no connection\n");
  }
 
-/* class Engine */ 
+/* class CommandEngine */ 
 
-class Engine : NoCopy , public CmdInput::Target
+class CommandEngine : NoCopy , public CmdInput::Target
  {
-   OwnPtr<DataEngine> engine;
+   OwnPtr<ConnectEngine> engine;
  
    CmdInputCon<ReadCon> cmd_input;
    bool run_flag;
    
   private:
 
+   template <class Func>
+   void cmd(Func func)
+    {
+     if( +engine )
+       {
+        engine->cmd(func);
+       }
+     else
+       {
+        Printf(Con,"closed\n");
+       }
+    }
+   
    void cmd_nothing(StrLen arg);
    void cmd_open(StrLen arg);
    void cmd_close(StrLen arg);
+   void cmd_test(StrLen arg);
+   void cmd_stat(StrLen arg);
    void cmd_exit(StrLen arg);
    void cmd_help(StrLen arg);
    
@@ -134,44 +344,48 @@ class Engine : NoCopy , public CmdInput::Target
    
   public:
 
-   Engine();
+   CommandEngine();
 
-   ~Engine();
+   ~CommandEngine();
 
    void run();
  };
    
-void Engine::cmd_nothing(StrLen)
+void CommandEngine::cmd_nothing(StrLen)
  {
  }
 
-void Engine::cmd_open(StrLen arg)
+void CommandEngine::cmd_open(StrLen arg)
  {
+  engine.set(0);
+  
+  ConnectParam param;
+  
   if( +arg )
     {
      ScanString inp(arg);
     
-     Net::UDPort pke_port;
-     Net::UDPort psec_port;
-
-     Scanf(inp," #; #; ",pke_port,psec_port);
+     Scanf(inp," #; #;",param,EndOfScan);
      
-     if( inp.isOk() )
+     if( inp.isFailed() )
        {
-        engine.set(new DataEngine(pke_port,psec_port));
-       }
-     else
-       {
-        Printf(Con,"invalid argument\n");
+        Printf(Con,"invalid arguments\n");
+        
+        return;
        }
     }
-  else
+
+  try
     {
-     engine.set(new DataEngine());
+     engine.set(new ConnectEngine(param));
+    }
+  catch(CatchType)
+    {
+     return;
     }
  }
 
-void Engine::cmd_close(StrLen)
+void CommandEngine::cmd_close(StrLen)
  {
   if( +engine ) 
     {
@@ -179,39 +393,55 @@ void Engine::cmd_close(StrLen)
   
      engine.set(0);
     } 
+  else
+    {
+     Printf(Con,"closed\n");
+    }
  }
 
-void Engine::cmd_exit(StrLen)
+void CommandEngine::cmd_test(StrLen)
+ {
+  cmd( [] (DataEngine &data) { data.test(); } );
+ }
+
+void CommandEngine::cmd_stat(StrLen)
+ {
+  cmd( [] (DataEngine &data) { data.stat(); } );
+ }
+
+void CommandEngine::cmd_exit(StrLen)
  {
   cmd_close({});
   
   run_flag=false;
  }
 
-void Engine::cmd_help(StrLen)
+void CommandEngine::cmd_help(StrLen)
  {
-  Putobj(Con,"commands: open close help exit\n");
+  Putobj(Con,"commands: open close test stat help exit\n");
  }
 
-void Engine::buildCmdList(CmdInput &input)
+void CommandEngine::buildCmdList(CmdInput &input)
  {
-  addCommand(input,"",&Engine::cmd_nothing);
-  addCommand(input,"open",&Engine::cmd_open);
-  addCommand(input,"close",&Engine::cmd_close);
-  addCommand(input,"exit",&Engine::cmd_exit);
-  addCommand(input,"help",&Engine::cmd_help);
+  addCommand(input,"",&CommandEngine::cmd_nothing);
+  addCommand(input,"open",&CommandEngine::cmd_open);
+  addCommand(input,"close",&CommandEngine::cmd_close);
+  addCommand(input,"test",&CommandEngine::cmd_test);
+  addCommand(input,"stat",&CommandEngine::cmd_stat);
+  addCommand(input,"exit",&CommandEngine::cmd_exit);
+  addCommand(input,"help",&CommandEngine::cmd_help);
  }
 
-Engine::Engine()
+CommandEngine::CommandEngine()
  : cmd_input(*this,"PSecTest> ")
  {
  }
 
-Engine::~Engine()
+CommandEngine::~CommandEngine()
  {
  }
  
-void Engine::run()
+void CommandEngine::run()
  {
   for(run_flag=true; run_flag ;) cmd_input.command();
  }
@@ -228,7 +458,7 @@ const char *const Testit<1031>::Name="Test1031 PSec";
 template<>
 bool Testit<1031>::Main() 
  {
-  Engine engine;
+  CommandEngine engine;
 
   engine.run();
   
