@@ -636,6 +636,19 @@ character, which does not satisfy the condition.
 <b>func</b> is a functor with the signature <b>boolable (char ch)</b>. It is used to specify the condition.
 </p>
 
+<pre>
+
+enum EndOfScanType
+ {
+  <span class="Att">EndOfScan</span>
+ };
+
+</pre>
+
+<p>
+This word cna be scanned. It fails the scanner if it is not empty.
+</p>
+
 </body>
 
 </html>
